# ecom-scraper-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
tests/: test_asyncio.py  test_database.py  test_utils.py
webscraper/: __init__.py  _constants.py  asyncio.py  database.py  scraping.py  utils.py
